# mygit

./: Cargo.toml  README.md
src/: ai.rs  config.rs  git.rs  main.rs
