[package]
name = "mygit"
version = "0.1.0"
edition = "2021"
description = "AI-powered git assistant — just tell it what you want"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/mygit"
keywords = ["git", "ai", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
dirs = "5.0"
